[gd_scene load_steps=30 format=3 uid="uid://o1csow2syem5"]

[ext_resource type="PackedScene" uid="uid://bbkpfum31rtav" path="res://Scenes/Levels/level.tscn" id="1_mmnpj"]
[ext_resource type="Script" path="res://Scenes/Levels/outter.gd" id="2_0yb6f"]
[ext_resource type="Texture2D" uid="uid://qfibbxpp23ed" path="res://graphics/ground/stones.png" id="2_pdnk4"]
[ext_resource type="Texture2D" uid="uid://bo2smwyhow6cd" path="res://graphics/decals/dirt_patch.png" id="3_2bwp4"]
[ext_resource type="Texture2D" uid="uid://ctntqwp7dv334" path="res://graphics/decals/moss/moss_1.png" id="4_836n6"]
[ext_resource type="Texture2D" uid="uid://diqjklsjeumx5" path="res://graphics/decals/moss/moss_4.png" id="5_ac8ki"]
[ext_resource type="Texture2D" uid="uid://bgsods41gtfnk" path="res://graphics/decals/moss/moss_2.png" id="6_7vbh3"]
[ext_resource type="Texture2D" uid="uid://danrvbd5137vq" path="res://graphics/tilesets/outside_walls.png" id="7_12a1b"]
[ext_resource type="PackedScene" uid="uid://b4fhbpek2m2u7" path="res://Scenes/Houses/house.tscn" id="8_ikisb"]
[ext_resource type="PackedScene" uid="uid://cut8dl3yh3qht" path="res://Scenes/objects/steam_vent.tscn" id="9_5fg4a"]
[ext_resource type="PackedScene" uid="uid://ce6s4oajccvnd" path="res://Scenes/objects/light_fan_animation.tscn" id="10_vmelx"]
[ext_resource type="PackedScene" uid="uid://cpeb8bjq12odc" path="res://Scenes/objects/wall.tscn" id="11_7n8r4"]
[ext_resource type="Texture2D" uid="uid://244n3jufp53m" path="res://graphics/objects/ventilation_surface.png" id="12_k5ioj"]
[ext_resource type="PackedScene" uid="uid://dd1t1irbp702r" path="res://Scenes/Enemies/bug.tscn" id="12_qqtk4"]
[ext_resource type="PackedScene" uid="uid://dfh1hx0dv6x07" path="res://Scenes/Enemies/drone.tscn" id="12_x2wkv"]
[ext_resource type="PackedScene" uid="uid://dsc6exod6xmhc" path="res://Scenes/objects/bed.tscn" id="13_a7tav"]
[ext_resource type="PackedScene" uid="uid://b63m4ojfrpc8x" path="res://Scenes/Enemies/car.tscn" id="13_bbdns"]
[ext_resource type="PackedScene" uid="uid://bgg1p005hrr62" path="res://Scenes/objects/crate.tscn" id="13_gyoml"]
[ext_resource type="PackedScene" uid="uid://bmolgfd6l5v3x" path="res://Scenes/Enemies/scout_enemy.tscn" id="13_s33fy"]
[ext_resource type="PackedScene" uid="uid://bmvrivpjhniic" path="res://Scenes/objects/toilet.tscn" id="14_pquun"]
[ext_resource type="Texture2D" uid="uid://blx41mkxi2awn" path="res://graphics/decals/moss/blood.png" id="16_6s4nm"]
[ext_resource type="Texture2D" uid="uid://clfy136e5jof4" path="res://graphics/lights/overlays/lattice.png" id="17_2c622"]
[ext_resource type="Texture2D" uid="uid://pefqywx2dusk" path="res://graphics/decals/brushes/brush047.png" id="18_y5k5o"]
[ext_resource type="Texture2D" uid="uid://df0pnfp4mn3bf" path="res://graphics/decals/brushes/brush046.png" id="19_pdce0"]
[ext_resource type="FontFile" uid="uid://dyo8qyoful8c0" path="res://graphics/ui/subatomic.tsoonami.ttf" id="24_m0phv"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_77pvc"]
texture = ExtResource("7_12a1b")
texture_region_size = Vector2i(390, 390)
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-72.1249, -69.2965, 195, -57.9828, 195, 60.8112, -66.468, 63.6396)
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(195, 66.468, -195, 57.9828, -195, -60.8112, 195, -60.8112)
2:0/0 = 0
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(72.1249, 60.8112, -195, 57.9828, -195, -60.8112, 66.468, -63.6396)
0:1/0 = 0
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-60.8112, -63.6396, -57.9828, 195, 60.8112, 195, 63.6396, -66.468)
1:1/0 = 0
1:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_0/angular_velocity = 0.0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(195, -63.6396, 195, 63.6396, 60.9638, 57.9861, 57.9828, 195, -60.8112, 195, -63.6396, -66.468)
2:1/0 = 0
2:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:1/0/physics_layer_0/angular_velocity = 0.0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(63.6396, 195, -63.6396, 195, -57.9861, 60.9638, -195, 57.9828, -195, -60.8112, 66.468, -63.6396)
0:2/0 = 0
0:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:2/0/physics_layer_0/angular_velocity = 0.0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(66.468, -195, 57.9828, 195, -60.8112, 195, -60.8112, -195)
1:2/0 = 0
1:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:2/0/physics_layer_0/angular_velocity = 0.0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-63.6396, -195, 63.6396, -195, 57.9861, -60.9638, 195, -57.9828, 195, 60.8112, -66.468, 63.6396)
2:2/0 = 0
2:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:2/0/physics_layer_0/angular_velocity = 0.0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(63.6396, -195, -63.6396, -195, -57.9861, -60.9638, -195, -57.9828, -195, 60.8112, 66.468, 63.6396)
0:3/0 = 0
0:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:3/0/physics_layer_0/angular_velocity = 0.0
0:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-63.6396, 49.4975, -57.9828, -195, 60.8112, -195, 57.9828, 46.669)

[sub_resource type="TileSet" id="TileSet_mnm21"]
tile_size = Vector2i(390, 390)
physics_layer_0/collision_layer = 4
physics_layer_0/collision_mask = 11
sources/0 = SubResource("TileSetAtlasSource_77pvc")

[sub_resource type="Theme" id="Theme_gxqg3"]
default_font = ExtResource("24_m0phv")
default_font_size = 30

[sub_resource type="Curve2D" id="Curve2D_mm7jx"]
_data = {
"points": PackedVector2Array(32.0362, -395.113, -32.0362, 395.113, -834, 2503, 0, 0, 0, 0, 1847, 2485, 0, 213.574, 0, -213.574, 4783, 2449, 0, 0, 0, 0, 4217, 1086, 352.398, -384.434, -352.398, 384.434, 2637, 883, -53.3936, -320.362, 53.3936, 320.362, 1996, 1940, 0, 0, 0, 0, -866, 2374)
}
point_count = 7

[node name="Outter Level" instance=ExtResource("1_mmnpj")]
script = ExtResource("2_0yb6f")

[node name="Sprite2D" type="Sprite2D" parent="Ground" index="0"]
texture_repeat = 2
position = Vector2(640, 352.5)
scale = Vector2(7.1979, 5.91475)
texture = ExtResource("2_pdnk4")
region_enabled = true
region_rect = Rect2(250.777, 93.115, 1526.6, 1044.31)

[node name="Sprite2D2" type="Sprite2D" parent="Ground" index="1"]
modulate = Color(0.796078, 0.952941, 0.827451, 1)
position = Vector2(-447, 823)
scale = Vector2(0.688064, 0.694097)
texture = ExtResource("3_2bwp4")

[node name="Sprite2D5" type="Sprite2D" parent="Ground" index="2"]
modulate = Color(0.796078, 0.952941, 0.827451, 1)
position = Vector2(-2625, -733)
scale = Vector2(1.5543, 0.994633)
texture = ExtResource("3_2bwp4")

[node name="Sprite2D4" type="Sprite2D" parent="Ground" index="3"]
modulate = Color(0.796078, 0.952941, 0.827451, 1)
position = Vector2(3942, -351)
rotation = 0.349066
scale = Vector2(1.5, 1.514)
texture = ExtResource("3_2bwp4")

[node name="Sprite2D3" type="Sprite2D" parent="Ground" index="4"]
modulate = Color(0.796078, 0.952941, 0.827451, 1)
position = Vector2(1917, 2201)
scale = Vector2(1.4745, 1.36941)
texture = ExtResource("3_2bwp4")

[node name="Moss1" type="Sprite2D" parent="Ground" index="5"]
position = Vector2(3047, -464)
texture = ExtResource("4_836n6")

[node name="Moss4" type="Sprite2D" parent="Ground" index="6"]
position = Vector2(1677, 859)
texture = ExtResource("5_ac8ki")

[node name="Moss5" type="Sprite2D" parent="Ground" index="7"]
position = Vector2(2619, 748)
texture = ExtResource("5_ac8ki")

[node name="Moss2" type="Sprite2D" parent="Ground" index="8"]
position = Vector2(4301, 28)
texture = ExtResource("6_7vbh3")

[node name="Moss3" type="Sprite2D" parent="Ground" index="9"]
position = Vector2(313, 2213)
texture = ExtResource("6_7vbh3")

[node name="Moss6" type="Sprite2D" parent="Ground" index="10"]
position = Vector2(-1137, 391)
texture = ExtResource("6_7vbh3")

[node name="Moss7" type="Sprite2D" parent="Ground" index="11"]
position = Vector2(-1017, 1541)
texture = ExtResource("6_7vbh3")

[node name="Moss8" type="Sprite2D" parent="Ground" index="12"]
position = Vector2(1104, 1464)
texture = ExtResource("6_7vbh3")

[node name="TileMap" type="TileMap" parent="Ground" index="13"]
tile_set = SubResource("TileSet_mnm21")
format = 2
layer_0/tile_data = PackedInt32Array(-65531, 0, 2, -327676, 65536, 0, -327677, 65536, 0, -327678, 65536, 0, -327679, 65536, 0, -327680, 65536, 0, -262145, 65536, 0, -262146, 65536, 1, 65542, 65536, 0, 65543, 65536, 0, -196603, 0, 2, -131067, 0, 2, -262139, 65536, 2, 5, 0, 2, 65541, 65536, 2, -327675, 131072, 1, 65549, 0, 2, 131085, 0, 2, 196621, 0, 2, 262157, 0, 2, 327693, 0, 2, 458761, 65536, 0, 458762, 65536, 0, 458763, 65536, 0, 458764, 65536, 0, 458760, 65536, 0, 458759, 65536, 0, 458758, 65536, 0, 458757, 65536, 0, 458753, 65536, 0, 458752, 65536, 0, 524287, 65536, 0, 524286, 65536, 0, 524285, 65536, 0, 458755, 65536, 0, 458754, 65536, 0, 458756, 65536, 0, 458765, 131072, 2, 393229, 0, 2, -196610, 131072, 2, -131074, 0, 2, -65538, 0, 2, -2, 0, 2, 65534, 0, 2, 131070, 131072, 2, -262138, 65536, 0, -262137, 65536, 0, -262136, 65536, 0, -262135, 65536, 0, -262134, 65536, 0, -262133, 65536, 0, -262132, 65536, 0, -262131, 131072, 1, -196595, 0, 2, -131059, 0, 2, -65523, 0, 2, 13, 0, 2, 524284, 65536, 0, 524283, 65536, 0, -65547, 0, 2, -131083, 0, 2, -196619, 65536, 1, -196611, 65536, 0, -196612, 65536, 0, -196613, 65536, 0, -196614, 65536, 0, -196615, 65536, 0, -196616, 65536, 0, -196617, 65536, 0, -196618, 65536, 0, 65544, 131072, 2, 8, 0, 2, -131064, 131072, 1, 11, 0, 2, 65547, 0, 2, -65525, 131072, 1, 131083, 65536, 2, 131084, 131072, 0, 393214, 65536, 0, 393215, 65536, 0, 327680, 65536, 0, 327681, 65536, 0, 327682, 65536, 0, 327683, 131072, 2, 262147, 0, 1, 393213, 65536, 2, 327677, 65536, 1, 327678, 131072, 2, 262142, 0, 1, -65526, 0, 0, -65528, 0, 2, -131065, 0, 0, 131069, 0, 0, 524282, 65536, 2, 458746, 0, 1)

[node name="House" parent="Ground" index="14" instance=ExtResource("8_ikisb")]
modulate = Color(0.980392, 0.980392, 0.980392, 1)
position = Vector2(-3245, 1466)
rotation = 4.71239

[node name="SteamVent" parent="Ground" index="15" instance=ExtResource("9_5fg4a")]
position = Vector2(760, 384)

[node name="lightFanAnimation" parent="Ground" index="16" instance=ExtResource("10_vmelx")]
position = Vector2(-3274, 484)
frame_progress = 0.171979

[node name="SteamVent2" parent="Ground" index="17" instance=ExtResource("9_5fg4a")]
position = Vector2(-3994, -43)

[node name="SteamVent3" parent="Ground" index="18" instance=ExtResource("9_5fg4a")]
position = Vector2(-4079, 2605)

[node name="VentilationSurface" type="Sprite2D" parent="Ground" index="19"]
position = Vector2(-2507, 1029)
texture = ExtResource("12_k5ioj")

[node name="Bed" parent="Ground" index="20" instance=ExtResource("13_a7tav")]
position = Vector2(-3100, 1081)
rotation = 3.14159

[node name="Toilet" parent="Ground" index="21" instance=ExtResource("14_pquun")]
position = Vector2(-3307, 1368)
rotation = -1.5708

[node name="Crate" parent="Ground" index="22" instance=ExtResource("13_gyoml")]
position = Vector2(-3227, 2694)
rotation = 3.14159

[node name="Crate2" parent="Ground" index="23" instance=ExtResource("13_gyoml")]
position = Vector2(-2964, 2694)
rotation = 3.14159

[node name="Crate3" parent="Ground" index="24" instance=ExtResource("13_gyoml")]
position = Vector2(-2688, 2699)
rotation = 3.14159

[node name="Crate13" parent="Ground" index="25" instance=ExtResource("13_gyoml")]
position = Vector2(-709, 389)
rotation = 1.5708

[node name="Crate14" parent="Ground" index="26" instance=ExtResource("13_gyoml")]
position = Vector2(-703, 119)
rotation = 1.5708

[node name="Crate15" parent="Ground" index="27" instance=ExtResource("13_gyoml")]
position = Vector2(-703, -157)
rotation = 1.5708

[node name="Crate8" parent="Ground" index="28" instance=ExtResource("13_gyoml")]
position = Vector2(2983, -706)
rotation = 3.14159

[node name="Crate10" parent="Ground" index="29" instance=ExtResource("13_gyoml")]
position = Vector2(-90, 2025)
rotation = 3.14159

[node name="Crate11" parent="Ground" index="30" instance=ExtResource("13_gyoml")]
position = Vector2(159, 2038)
rotation = 3.14159

[node name="Crate9" parent="Ground" index="31" instance=ExtResource("13_gyoml")]
position = Vector2(3269, -706)
rotation = 3.14159

[node name="Crate4" parent="Ground" index="32" instance=ExtResource("13_gyoml")]
position = Vector2(-352, 2026)
rotation = 3.14159

[node name="Crate5" parent="Ground" index="33" instance=ExtResource("13_gyoml")]
position = Vector2(2521, 466)
rotation = 3.14159

[node name="Crate6" parent="Ground" index="34" instance=ExtResource("13_gyoml")]
position = Vector2(-36, 216)

[node name="Crate12" parent="Ground" index="35" instance=ExtResource("13_gyoml")]
position = Vector2(253, 205)

[node name="Crate7" parent="Ground" index="36" instance=ExtResource("13_gyoml")]
position = Vector2(2885, 458)
rotation = 3.14159

[node name="Moss9" type="Sprite2D" parent="Ground" index="37"]
position = Vector2(1226, 1976)
texture = ExtResource("6_7vbh3")

[node name="Moss10" type="Sprite2D" parent="Ground" index="38"]
position = Vector2(-742, 1984)
texture = ExtResource("4_836n6")

[node name="Blood" type="Sprite2D" parent="Ground" index="39"]
modulate = Color(1, 1, 1, 0.756863)
position = Vector2(-2380, 302)
scale = Vector2(2.39946, 1.88071)
texture = ExtResource("16_6s4nm")

[node name="Lattice" type="Sprite2D" parent="Ground" index="40"]
modulate = Color(1, 1, 1, 0.054902)
position = Vector2(-3233, 1912)
scale = Vector2(5.67442, 3.49387)
texture = ExtResource("17_2c622")

[node name="Brush047" type="Sprite2D" parent="Ground" index="41"]
modulate = Color(0, 0, 0, 0.141176)
position = Vector2(-3170, 1124)
texture = ExtResource("18_y5k5o")

[node name="Brush046" type="Sprite2D" parent="Ground" index="42"]
modulate = Color(0.0196078, 0.0196078, 0.0196078, 0.313726)
position = Vector2(3936.5, 1335.5)
scale = Vector2(2.01893, 1.6845)
texture = ExtResource("19_pdce0")

[node name="Decals" parent="." index="1"]
metadata/_edit_lock_ = true

[node name="Eneimes" parent="." index="2"]
metadata/_edit_lock_ = true

[node name="Bug" parent="Eneimes" index="0" instance=ExtResource("12_qqtk4")]
position = Vector2(2654, -209)

[node name="Bug10" parent="Eneimes" index="1" instance=ExtResource("12_qqtk4")]
position = Vector2(2484, 54)

[node name="Bug11" parent="Eneimes" index="2" instance=ExtResource("12_qqtk4")]
position = Vector2(2857, 50)

[node name="Bug12" parent="Eneimes" index="3" instance=ExtResource("12_qqtk4")]
position = Vector2(4688, 664)

[node name="Bug13" parent="Eneimes" index="4" instance=ExtResource("12_qqtk4")]
position = Vector2(5072, 824)

[node name="Bug6" parent="Eneimes" index="5" instance=ExtResource("12_qqtk4")]
position = Vector2(-3178, 2075)

[node name="Bug7" parent="Eneimes" index="6" instance=ExtResource("12_qqtk4")]
position = Vector2(-2847, 2520)

[node name="Bug8" parent="Eneimes" index="7" instance=ExtResource("12_qqtk4")]
position = Vector2(-2996, 2088)

[node name="Bug9" parent="Eneimes" index="8" instance=ExtResource("12_qqtk4")]
position = Vector2(-3105, 2350)

[node name="Bug2" parent="Eneimes" index="9" instance=ExtResource("12_qqtk4")]
position = Vector2(789, 1694)

[node name="Bug3" parent="Eneimes" index="10" instance=ExtResource("12_qqtk4")]
position = Vector2(389, 1770)

[node name="Bug4" parent="Eneimes" index="11" instance=ExtResource("12_qqtk4")]
position = Vector2(341, 1561)

[node name="Bug14" parent="Eneimes" index="12" instance=ExtResource("12_qqtk4")]
position = Vector2(-3656, -1058)

[node name="Bug16" parent="Eneimes" index="13" instance=ExtResource("12_qqtk4")]
position = Vector2(-3338, -1178)

[node name="Bug17" parent="Eneimes" index="14" instance=ExtResource("12_qqtk4")]
position = Vector2(-2948, -1148)

[node name="Bug15" parent="Eneimes" index="15" instance=ExtResource("12_qqtk4")]
position = Vector2(-3171, -1058)

[node name="Bug5" parent="Eneimes" index="16" instance=ExtResource("12_qqtk4")]
position = Vector2(37, 1818)

[node name="Drone" parent="Eneimes" index="17" instance=ExtResource("12_x2wkv")]
position = Vector2(3880, 1339)

[node name="Drone2" parent="Eneimes" index="18" instance=ExtResource("12_x2wkv")]
position = Vector2(-2846, 349)

[node name="Scout enemy" parent="Eneimes" index="19" instance=ExtResource("13_s33fy")]
position = Vector2(3425, 1665)

[node name="Scout enemy5" parent="Eneimes" index="20" instance=ExtResource("13_s33fy")]
position = Vector2(2565, 1809)

[node name="Scout enemy2" parent="Eneimes" index="21" instance=ExtResource("13_s33fy")]
position = Vector2(4015, 2027)

[node name="Scout enemy3" parent="Eneimes" index="22" instance=ExtResource("13_s33fy")]
position = Vector2(1713, 1114)

[node name="Scout enemy4" parent="Eneimes" index="23" instance=ExtResource("13_s33fy")]
position = Vector2(2213, 1529)

[node name="Scout enemy6" parent="Eneimes" index="24" instance=ExtResource("13_s33fy")]
position = Vector2(-804, 2554)

[node name="Scout enemy7" parent="Eneimes" index="25" instance=ExtResource("13_s33fy")]
position = Vector2(-1642, 2138)

[node name="Scout enemy8" parent="Eneimes" index="26" instance=ExtResource("13_s33fy")]
position = Vector2(-1236, 2533)

[node name="Wall" parent="." index="3" instance=ExtResource("11_7n8r4")]
position = Vector2(722, -477)
metadata/_edit_lock_ = true

[node name="player" parent="." index="4"]
position = Vector2(163, 355)
metadata/_edit_group_ = true

[node name="Lights" parent="." index="6"]
metadata/_edit_lock_ = true

[node name="message" type="Label" parent="UI" index="1"]
visible = false
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.157
anchor_right = 0.5
anchor_bottom = 0.157
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2
theme = SubResource("Theme_gxqg3")
text = "Clear the area first to go inside the bunker"

[node name="Path2D" type="Path2D" parent="." index="8"]
position = Vector2(129, 55)
curve = SubResource("Curve2D_mm7jx")

[node name="Car" parent="Path2D" index="0" instance=ExtResource("13_bbdns")]
position = Vector2(2360.29, 2512.02)
rotation = 0.0472538
progress = 3271.41

[node name="DirectionalLight2D" type="DirectionalLight2D" parent="." index="9"]
color = Color(0.282353, 0.282353, 0.262745, 1)
blend_mode = 1
metadata/_edit_lock_ = true

[connection signal="houseEnter" from="Ground/House" to="." method="_on_house_house_enter"]
[connection signal="houseLeave" from="Ground/House" to="." method="_on_house_house_leave"]
[connection signal="player_entered" from="Wall" to="." method="_on_wall_player_entered"]
[connection signal="player_left" from="Wall" to="." method="_on_wall_player_left"]
